--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body {
-    background-color: rgb(245, 239, 239);
+    /*background-color: rgb(245, 239, 239);*/
     display: flex;
     flex: 1;
     flex-direction: column;
-    font-size: 26px;
+    font-size: 20px;
     margin: 0;
     height: 100%;
     
 }
 /* Header section*/
 .header-section {
-    background-color: rgb(6, 21, 68);
+    background-color:#1f2937;
     color: whitesmoke;
-    padding: 8px;
+    padding: 20px;
     height: 100%;
     font-size: 80%;
     
@@ -22,7 +22,8 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 8px;
-    padding: 10px;
+    padding: 20px;
+    
 }
 
 ul {
@@ -53,7 +54,7 @@ a {
 button {
     padding: 5px;
     font-size: 18px;
-    background-color: rgb(10, 135, 177);
+    background-color:  #3882f6;
     border-radius: 5px;
     color: white;
     border: none;
@@ -64,9 +65,85 @@ button {
     background-color: rgb(158, 162, 165);
 }
 
+/*Random information section*/
+.info {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /*background-color: antiquewhite;*/
+    color: #1f2937;
+}
+
+.info h2 {
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.image-cont {
+    text-align: center;
+    display: flex;
+    /*background-color: aqua;*/
+    padding: 20px;
+    /*width: 1500px;*/
+    /*overflow: hidden;*/
+}
+
+.image-cont p {
+    /*text-align: center;*/
+    padding: 10px;
+    gap: 20px;
+}
+
+.image-cont p img {
+    border: 3px solid #3882f6;
+    max-width: 300px;
+    height: 300px;
+    border-radius: 3px;
+    background-color: black;
+    overflow: hidden;
+}
+/*Testimonials section*/
+.testimony{ 
+    background-color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.content {
+    width: 900px;
+    margin: 20px;
+}
+
+.test-cont {
+    font-style: italic;
+    font-size: 36px;
+}
+
+/*call to action section*/
+.call-to-action {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.call-content {
+    width: 900px;
+    background-color: #3882f6;
+    margin: 20px;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.call-text {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 /*Footer section*/
 .footer {
-    background-color: rgb(6, 21, 68);
+    background-color:  #1f2937;
     text-align: center;
     font-size: 80%;
     color: whitesmoke;
