--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
 body {
-    /*background-color: rgb(245, 239, 239);*/
+    /*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
     display: flex;
     flex: 1;
     flex-direction: column;
-    font-size: 20px;
     margin: 0;
     height: 100%;
+    color: #f9faf8;
     
 }
 /* Header section*/
 .header-section {
     background-color:#1f2937;
-    color: whitesmoke;
+    color: #e5e7eb;
     padding: 20px;
     height: 100%;
-    font-size: 80%;
-    
+    font-size: 18px;
+}
+
+.header-content {
+    justify-content: center;
+    margin: 0 80px;
 }
 
 .navbar {
@@ -23,7 +27,10 @@ body {
     justify-content: space-between;
     gap: 8px;
     padding: 20px;
-    
+}
+
+.content-left {
+    font-size: 24px;
 }
 
 ul {
@@ -35,32 +42,42 @@ ul {
 
 a {
     text-decoration: none;
-    color: whitesmoke;
     padding: 10px;
+    color: #f9faf8;;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    margin: 50px 0;
 
 }
 
-.banner-text {
-    max-width: 400px;
-    height: auto;
+.banner-text h1 {
+    font-size: 48px;
+    margin: 0;
 }
- /*combines both buttons on the landing page*/
-button {
-    padding: 5px;
+
+.banner-text p {
     font-size: 18px;
+    margin: 0;
+}
+
+/*combines both buttons on the landing page*/
+button {
     background-color:  #3882f6;
     border-radius: 5px;
-    color: white;
     border: none;
+    padding: 7px;
+    font-size: 18px;
+    margin-top: 10px;
+    color: #f9faf8;;
+    
+    
 }
 .header > img {
-    width: 550px;
+    width: 500px;
     height: auto;
     background-color: rgb(158, 162, 165);
 }
@@ -70,7 +87,6 @@ button {
     justify-content: center;
     align-items: center;
     text-align: center;
-    /*background-color: antiquewhite;*/
     color: #1f2937;
 }
 
@@ -78,30 +94,25 @@ button {
     font-size: 36px;
     font-weight: bolder;
 }
-
-.image-cont {
-    text-align: center;
+.image-info {
     display: flex;
-    /*background-color: aqua;*/
-    padding: 20px;
-    /*width: 1500px;*/
-    /*overflow: hidden;*/
-}
+    justify-content: center;
+ }
 
-.image-cont p {
-    /*text-align: center;*/
+.image-info p {
+    font-size: 18px;
     padding: 10px;
-    gap: 20px;
+    max-width: 300px;
+    height: auto;
 }
 
-.image-cont p img {
-    border: 3px solid #3882f6;
-    max-width: 300px;
-    height: 300px;
-    border-radius: 3px;
-    background-color: black;
-    overflow: hidden;
+.image-info p img {
+    width: 250px;
+    height: auto;
+    border: 4px solid #3882f6;
+    border-radius: 8px;
 }
+
 /*Testimonials section*/
 .testimony{ 
     background-color: #e5e7eb;
@@ -118,12 +129,14 @@ button {
 .test-cont {
     font-style: italic;
     font-size: 36px;
+    color: #1f2937;
 }
 
 .author {
     margin-left: 690px;
     margin-top: 15px;
     font-weight: 800;
+    color: #1f2937;
 }
 
 /*call to action section*/
@@ -144,14 +157,20 @@ button {
 .call-text {
     display: flex;
     justify-content: space-between;
-    color: white;
+    font-size: 18px;
+}
+
+.call-text p {
+    margin-bottom: 0;
 }
 
 .call-text button {
-    border: 2px solid white;
+    border: 2px solid #f9faf8;
     padding: 7px;
     font-size: 18px;
-    margin: 38px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: inherit;
 }
 
 
@@ -159,7 +178,6 @@ button {
 .footer {
     background-color:  #1f2937;
     text-align: center;
-    font-size: 80%;
-    color: whitesmoke;
-    padding: 20px;
+    padding: 40px;
+    font-size: 18px;
 }
