--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    /*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -31,6 +31,7 @@ body {
 
 .content-left {
     font-size: 24px;
+    font-weight: 900;
 }
 
 ul {
@@ -56,6 +57,7 @@ a {
 
 .banner-text h1 {
     font-size: 48px;
+    font-weight: bolder;
     margin: 0;
 }
 
