--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -57,7 +57,6 @@ a {
 
 .banner-text h1 {
     font-size: 48px;
-    font-weight: bolder;
     margin: 0;
 }
 
